добавлен слайдер, удален предыдущий слайдер

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,5 @@
 @import "extra/_normalize.scss"
-@import "extra/_slaider-css.scss"
-@import "extra/_slaider-style.scss"
+@import "extra/_slaid.scss"
 @import "_colors.sass"
 @import "_fonts.sass"
 @import "_interface.sass"
